// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreviewGrid render PreviewGrid loading 1`] = `
<div
  className="preview-grid"
>
  <span
    className=""
  >
    <i
      aria-hidden="true"
      className="fa fa-spinner fa-pulse"
    />
     
    Loading...
  </span>
</div>
`;

exports[`PreviewGrid render PreviewGrid with data 1`] = `
<div
  className="preview-grid"
>
  <p>
    Previewing first 3 rows and 4 of 5 columns.
  </p>
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Name"
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null"
          >
            Name
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Flag"
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            title="Contains a reference to a user-editable comment about this row"
          >
            Flag
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="mixtureTypeId"
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
          >
            Mixture Type
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="expirationTime"
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            title="The expiration period in days."
          >
            Expiration Time
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="grid-row-alternate"
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/rd/expdata/41426"
            >
              DMEXP
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/q/lists/MixtureTypes/2"
            >
              Solution
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            30
          </td>
        </tr>
        <tr
          className="grid-row"
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/rd/expdata/41425"
            >
              TBS
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/q/lists/MixtureTypes/2"
            >
              Solution
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            30
          </td>
        </tr>
        <tr
          className="grid-row-alternate"
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/rd/expdata/41424"
            >
              PBS
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/q/lists/MixtureTypes/2"
            >
              Solution
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            30
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`PreviewGrid render PreviewGrid with different numCols and numRows 1`] = `
<div
  className="preview-grid"
>
  <p>
    Previewing first 2 rows and 2 of 5 columns.
  </p>
  <div
    className="table-responsive"
  >
    <div
      className="grid-messages"
    />
    <table
      className="table table-striped table-bordered"
    >
      <thead>
        <tr>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Name"
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            title="Contains a short name for this data object
If not provided, a unique name will be generated from the expression:
null"
          >
            Name
          </th>
          <th
            className="grid-header-cell"
            draggable={false}
            id="Flag"
            onDragEnd={[Function]}
            onDragEnter={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={
              Object {
                "minWidth": undefined,
              }
            }
            title="Contains a reference to a user-editable comment about this row"
          >
            Flag
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="grid-row-alternate"
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/rd/expdata/41426"
            >
              DMEXP
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
        <tr
          className="grid-row"
        >
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            <a
              href="#/rd/expdata/41425"
            >
              TBS
            </a>
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
